@@ -1,3 +1,8 @@
+2005-07-27  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDeveloperExtensions/Commands.cs:
+	* MonoDeveloperExtensions/MonoProject.cs: Track api changes.
+
 2005-07-13  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoMakefileFormat.cs: Avoid adding projects twice.
